--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ click>=8.0.1
 pyperclip>=1.8.2
 web3==5.31.4
 diffusers==0.11.1
-transformers
+transformers==4.26.1
 ftfy
-accelerate
+accelerate==0.16.0
 GPUtil==1.4.0
 numba==0.56.4
 typing==3.7.4.3
